--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -6,21 +6,15 @@
 
 .nav a {
   display: inline-flex;
-  padding: 16px 16px;
-  color: #ddd;
+  padding: 10px 20px;
 
   align-self: center;
 
-  background-color: #5ca2fd;
-
-  border-radius: 4px;
+  border-radius: 30px;
   transition: background-color 250ms ease-in-out;
 }
 
-.nav a:hover {
-  background-color: rgb(55, 155, 236);
-}
-
 .nav a:active {
-  background-color: rgb(17, 79, 131);
+  color: var(--primary-black);
+  background-color: var(--primary-green);
 }
