--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,17 +1,18 @@
 .header {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
   margin-bottom: 60px;
-}
 
-.container {
-  width: 1170px;
-  margin: 0 auto;
-  padding: 0 15px;
+  font-size: 32px;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   gap: 20px;
+
+  margin-top: 40px;
+}
+
+.nav a {
+  text-transform: uppercase;
+
 }
