--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -1,11 +1,51 @@
 .form {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  align-self: center;
   gap: 20px;
-  width: 300px;
-  padding: 30px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: rgb(255, 255, 255);
+  transition: transform var(--transition);
+}
+
+.input {
+  width: 250px;
+  border: 2px solid var(--transparent-green);
+  border-radius: 20px;
+  padding: 14px 10px;
+
+  background-color: var(--primary-black);
+  color: var(--primary-green);
+}
+
+.input:focus {
+  border: 2px solid var(--primary-green);
+  outline: none;
+}
+
+.input::placeholder {
+  color: var(--transparent-green);
+}
+
+.button {
+  display: flex;
+  gap: 10px;
+  border: 2px solid var(--transparent-green);
+  border-radius: 20px;
+  padding: 10px 20px;
+
+  background-color: var(--primary-green);
+  color: var(--primary-black);
+  text-transform: uppercase;
+  cursor: pointer;
+
+  transition: background-color var(--transition);
+}
+
+.button:hover {
+  background-color: var(--transparent-green);
+}
+
+.button:active {
+  background-color: transparent;
+  color: var(--primary-green);
 }
