--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
 @import-normalize;
 
+:root {
+  --primary-green: #04F22A;
+  --transparent-green: #04f22ca3;
+  --primary-black: #151515;
+
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 body {
   margin: 0;
-  background-color: #323232;
-  color: #555;
+  background-color: var(--primary-black);
+  color: var(--primary-green);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -22,13 +30,10 @@ ul {
   padding: 0;
 }
 
-.Container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 40px;
-  margin-right: 40px;
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 p {
@@ -47,4 +52,8 @@ p {
 
 a {
   text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
 }
