--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -9,3 +9,14 @@
   display: flex;
   gap: 14px;
 }
+
+.navItem {
+  border-radius: 20px;
+  padding: 6px 12px;
+  border: 2px solid var(--primary-black);
+  transition: border 250ms ease-in-out;
+}
+
+.active {
+  border: 2px solid var(--primary-green);
+}
