change link color

--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -10,6 +10,8 @@
 
   align-self: center;
 
+  color: var(--primary-green);
+
   border-radius: 30px;
   transition: background-color 250ms ease-in-out;
 }
